// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleIcon renders correctly when given svgData 1`] = `
<styled.div
  size="small"
>
  <SVGIcon
    size="xsmall"
    svgData={<g />}
    top={8}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with undefined size attribute 1`] = `
<styled.div
  size="small"
>
  <SVGIcon
    color="#ffffff"
    name="cross"
    size="xsmall"
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    top={8}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with valid size 1`] = `
<styled.div
  size="large"
>
  <SVGIcon
    color="#ffffff"
    name="cross"
    size="medium"
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    top={12}
  />
</styled.div>
`;

exports[`CircleIcon renders nothing with invalid size 1`] = `""`;
